big changes thonk

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "effective.subtitles.ambience.waterfall": "Water falls"
+  "effective.subtitles.ambience.waterfall": "Water falls",
+  "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
+  "text.autoconfig.effective.option.generateSplashes": "Generate Splashes"
 }
