--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
   "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
-  "text.autoconfig.effective.option.generateSplashes": "Generate Splashes"
+  "text.autoconfig.effective.option.generateSplashes": "Generate Splashes",
+  "text.autoconfig.effective.option.canLapisBlocksForceWaterfallClouds": "Can Lapis Block Force Waterfall Clouds"
 }
