--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -3,5 +3,5 @@
   "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
   "text.autoconfig.effective.option.generateSplashes": "Generate Splashes",
   "text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
-  "text.autoconfig.effective.option.canLapisBlocksForceWaterfallClouds": "Can Lapis Block Force Waterfall Clouds"
+  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance"
 }
