--- a/src/main/resources/assets/effective/lang/ru_ru.json
+++ b/src/main/resources/assets/effective/lang/ru_ru.json
@@ -1,7 +1,7 @@
 {
-  "effective.subtitles.ambience.waterfall": "Вода падает",
-  "text.autoconfig.effective.option.generateCascades": "Генерировать Брызги",
-  "text.autoconfig.effective.option.generateSplashes": "Генерировать Всплески",
-  "text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Текущая Вода Создаёт Састицы При Первом Тике",
-  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Вероятность Появления Частиц Лазурита При Обновлении"
+"effective.subtitles.ambience.waterfall": "Вода падает",
+"text.autoconfig.effective.option.generateCascades": "Генерировать брызги",
+"text.autoconfig.effective.option.generateSplashes": "Генерировать всплески",
+"text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Текущая вода создаёт частицы при первом тике",
+"text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Вероятность появления частиц лазурита при обновлении"
 }
