[feat] use ModConfig
* new option `waterfallSoundDistanceBlocks`

* new option `waterfallSoundVolume`

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -3,5 +3,7 @@
   "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
   "text.autoconfig.effective.option.generateSplashes": "Generate Splashes",
   "text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
-  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance"
+  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance",
+  "text.autoconfig.effective.option.waterfallSoundDistanceBlocks": "Distance To Hear Of Waterfalls [block(s)]",
+  "text.autoconfig.effective.option.waterfallSoundVolume": "Sound Volume Of Waterfalls [%]"
 }
