[update] make compatible with MidnightLib
* update `en_us.json`

* change type of `lapisBlockUpdateParticleChance` from `long` to `int` that it can be changed by ModMenu

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,9 +1,9 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
-  "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
-  "text.autoconfig.effective.option.generateSplashes": "Generate Splashes",
-  "text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
-  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance",
-  "text.autoconfig.effective.option.waterfallSoundDistanceBlocks": "Distance To Hear Of Waterfalls [block(s)]",
-  "text.autoconfig.effective.option.waterfallSoundVolume": "Sound Volume Of Waterfalls [%]"
+  "effective.midnightconfig.generateCascades": "Generate Cascades",
+  "effective.midnightconfig.generateSplashes": "Generate Splashes",
+  "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
+  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance",
+  "effective.midnightconfig.waterfallSoundDistanceBlocks": "Distance To Hear Of Waterfalls [block(s)]",
+  "effective.midnightconfig.waterfallSoundVolume": "Sound Volume Of Waterfalls [%]"
 }
