Finish moving to midnightlib

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
-  "text.autoconfig.effective.option.generateCascades": "Generate Cascades",
-  "text.autoconfig.effective.option.generateSplashes": "Generate Splashes",
-  "text.autoconfig.effective.option.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
-  "text.autoconfig.effective.option.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance"
+  "effective.midnightconfig.generateCascades": "Generate Cascades",
+  "effective.midnightconfig.generateSplashes": "Generate Splashes",
+  "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
+  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance"
 }
