Add a new config option to adjust cascade sounds volume

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -3,5 +3,6 @@
   "effective.midnightconfig.generateCascades": "Generate Cascades",
   "effective.midnightconfig.generateSplashes": "Generate Splashes",
   "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles On First Tick",
-  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance"
+  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis Block Update Particle Chance",
+  "effective.midnightconfig.cascadeSoundsVolumeMultiplier": "Cascade Sound Volume Multiplier"
 }
