Add a config option to control the density or remove flowing water splashing particles

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -8,5 +8,6 @@
   "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis block update particle chance",
   "effective.midnightconfig.cascadeSoundDistanceBlocks": "Distance to hear cascades [block(s)]",
   "effective.midnightconfig.cascadeSoundsVolumeMultiplier": "Cascade sound volume multiplier",
-  "effective.midnightconfig.rainRippleDensity": "Rain ripples density"
+  "effective.midnightconfig.rainRippleDensity": "Rain ripples density",
+  "effective.midnightconfig.flowingWaterSplashingDesity": "Flowing water splashing density"
 }
