Finalise allay trails and add a config option to trigger allay twinkle additiveness

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -14,5 +14,6 @@
   "effective.midnightconfig.glowsquidHypnotizeAttractCursor": "Enable glow squid cursor attraction (requires glow squid hypnotizing)",
   "effective.midnightconfig.enableAllayTrails": "Enable Allay trails",
   "effective.midnightconfig.allayTwinkleDensity": "Allay trail twinkle density (requires Allay trails)",
+  "effective.midnightconfig.additiveAllayTwinkle": "Enable additive Allay twinkles (improved looks but incompatible with shaders)",
   "effective.midnightconfig.goldenAllays": "Enable golden Allays"
 }
