Fix config screen title

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
+  "effective.midnightconfig.title": "Effective Config",
   "effective.midnightconfig.enableSplashes": "Enable splashes",
   "effective.midnightconfig.splashRimAlpha": "Splash rim alpha",
   "effective.midnightconfig.enableCascades": "Enable cascades",
