--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,13 +1,23 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
-
-  "effective.midnightconfig.generateSplashes": "Generate splashes",
+  "effective.midnightconfig.title": "Effective Config",
+  "effective.midnightconfig.enableSplashes": "Enable splashes",
   "effective.midnightconfig.splashRimAlpha": "Splash rim alpha",
-  "effective.midnightconfig.generateCascades": "Generate cascades",
+  "effective.midnightconfig.enableCascades": "Enable cascades",
   "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should flowing water spawn particles on first tick",
   "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis block update particle chance",
   "effective.midnightconfig.cascadeSoundDistanceBlocks": "Distance to hear cascades [block(s)]",
   "effective.midnightconfig.cascadeSoundsVolumeMultiplier": "Cascade sound volume multiplier",
   "effective.midnightconfig.rainRippleDensity": "Rain ripples density",
-  "effective.midnightconfig.flowingWaterSplashingDesity": "Flowing water splashing density"
+  "effective.midnightconfig.flowingWaterSplashingDensity": "Flowing water splashing density",
+  "effective.midnightconfig.enableGlowingPlankton": "Enable glowing plankton splashes and ripples in warm oceans at night",
+  "effective.midnightconfig.glowsquidHypnotize": "Enable glow squid hypnotizing",
+  "effective.midnightconfig.glowsquidHypnotizeAttractCursor": "Enable glow squid cursor attraction (requires glow squid hypnotizing)",
+  "effective.midnightconfig.enableAllayTrails": "Enable Allay trails",
+  "effective.midnightconfig.allayTwinkleDensity": "Allay trail twinkle density (requires Allay trails)",
+  "effective.midnightconfig.goldenAllays": "Enable golden Allays",
+  "effective.midnightconfig.wardenScreenShake": "Enable Warden roar causing screen shake",
+  "effective.midnightconfig.sonicBoomScreenShake": "Enable Warden sonic booms causing screen shake",
+  "effective.midnightconfig.ravagerScreenShake": "Enable Ravager roar causing screen shake",
+  "effective.midnightconfig.dragonScreenShake": "Enable Ender Dragon perch roaring causing screen shake"
 }
