--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -19,5 +19,6 @@
   "effective.midnightconfig.wardenScreenShake": "Enable Warden roar causing screen shake",
   "effective.midnightconfig.sonicBoomScreenShake": "Enable Warden sonic booms causing screen shake",
   "effective.midnightconfig.ravagerScreenShake": "Enable Ravager roar causing screen shake",
-  "effective.midnightconfig.dragonScreenShake": "Enable Ender Dragon perch roaring causing screen shake"
+  "effective.midnightconfig.dragonScreenShake": "Enable Ender Dragon perch roaring causing screen shake",
+  "effective.midnightconfig.fireflyDensity": "Firefly density"
 }
