--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -1,37 +1,61 @@
 {
   "effective.subtitles.ambience.waterfall": "Water falls",
+
   "effective.midnightconfig.title": "Effective Config",
-  "effective.midnightconfig.splashes": "Enable splashes",
-  "effective.midnightconfig.splashRimAlpha": "Splash rim alpha",
-  "effective.midnightconfig.cascades": "Enable cascades",
-  "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should flowing water spawn particles on first tick",
-  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis block update particle chance",
-  "effective.midnightconfig.cascadeSoundDistanceBlocks": "Distance to hear cascades [block(s)]",
-  "effective.midnightconfig.cascadeSoundsVolumeMultiplier": "Cascade sound volume multiplier",
-  "effective.midnightconfig.rainRippleDensity": "Rain ripples density",
-  "effective.midnightconfig.flowingWaterSplashingDensity": "Flowing water splashing density",
-  "effective.midnightconfig.glowingPlankton": "Enable glowing plankton splashes and ripples in warm oceans at night",
-  "effective.midnightconfig.glowsquidHypnotize": "Enable glow squid hypnotizing",
-  "effective.midnightconfig.glowsquidHypnotizeAttractCursor": "Enable glow squid cursor attraction (requires glow squid hypnotizing)",
+
+  "effective.midnightconfig.waterEffects": "Water Effects",
+  "effective.midnightconfig.splashes": "Enable Splashes",
+  "effective.midnightconfig.splashRimAlpha": "Splash Rim Alpha",
+  "effective.midnightconfig.flowingWaterSplashingDensity": "Flowing Water Splashing Density",
+  "effective.midnightconfig.cascades": "Enable Cascades",
+  "effective.midnightconfig.cascadeCloudDensity": "Cascade Cloud Density",
+  "effective.midnightconfig.cascadeMistDensity": "Cascade Mist Density",
+  "effective.midnightconfig.cascadeSoundsVolumeMultiplier": "Cascade Sound Volume Multiplier",
+  "effective.midnightconfig.cascadeSoundDistanceBlocks": "Distance to Hear Cascades (in blocks)",
+  "effective.midnightconfig.shouldFlowingWaterSpawnParticlesOnFirstTick": "Should Flowing Water Spawn Particles on First Tick",
+  "effective.midnightconfig.lapisBlockUpdateParticleChance": "Lapis Lazuli block update particle chance",
+  "effective.midnightconfig.rainRippleDensity": "Rain Ripples Density",
+  "effective.midnightconfig.glowingPlankton": "Glowing Plankton (in Warm / Lukewarm Oceans at Night)",
+  "effective.midnightconfig.underwaterOpenChestBubbles": "Open Chests Underwater Emit Bubbles",
+  "effective.midnightconfig.underwaterChestsOpenRandomly": "Underwater Chests Open Randomly",
+  "effective.midnightconfig.enum.ChestsOpenOptions.ON_SOUL_SAND": "On Soul Sand",
+  "effective.midnightconfig.enum.ChestsOpenOptions.RANDOMLY": "Randomly",
+  "effective.midnightconfig.enum.ChestsOpenOptions.NEVER": "Never",
+
+  "effective.midnightconfig.entityEffects": "Entity Effects",
+  "effective.midnightconfig.glowSquidHypnotize": "Glow Squid Hypnotizing",
+  "effective.midnightconfig.enum.GlowSquidHypnoOptions.ATTRACT": "Attract Cursor",
+  "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Visual",
+  "effective.midnightconfig.enum.GlowSquidHypnoOptions.NEVER": "Never",
   "effective.midnightconfig.allayTrails": "Enable Allay trails",
-  "effective.midnightconfig.allayTwinkleDensity": "Allay trail twinkle density (requires Allay trails)",
-  "effective.midnightconfig.goldenAllays": "Enable golden Allays",
-  "effective.midnightconfig.wardenScreenShake": "Enable Warden roar causing screen shake",
-  "effective.midnightconfig.sonicBoomScreenShake": "Enable Warden sonic booms causing screen shake",
-  "effective.midnightconfig.ravagerScreenShake": "Enable Ravager roar causing screen shake",
-  "effective.midnightconfig.dragonScreenShake": "Enable Ender Dragon perch roaring causing screen shake",
-  "effective.midnightconfig.fireflyDensity": "Firefly spawn density",
-  "effective.midnightconfig.chorusPetalDensity": "Chorus Petal spawn density",
-  "effective.midnightconfig.willOWispDensity": "Will O' Wisp spawn density",
-  "effective.midnightconfig.eyesInTheDark": "Enable eyes in the dark",
-  "effective.midnightconfig.eyesInTheDarkOptions.HALLOWEEN": "On Halloween",
-  "effective.midnightconfig.eyesInTheDarkOptions.ALWAYS": "Always",
-  "effective.midnightconfig.eyesInTheDarkOptions.DISABLED": "No",
-  "effective.midnightconfig.improvedFireballs": "Improve fireballs",
-  "effective.midnightconfig.improvedDragonFireballsAndBreath": "Improve dragon fireballs and breath",
-  "effective.midnightconfig.cosmetics": "Enable cosmetics",
-  "effective.midnightconfig.CosmeticsOptions.true": "Yes",
-  "effective.midnightconfig.CosmeticsOptions.FIRST_PERSON": "Yes + First Person",
-  "effective.midnightconfig.CosmeticsOptions.FALSE": "No",
+  "effective.midnightconfig.goldenAllays": "Enable Golden Allays",
+
+  "effective.midnightconfig.screenShakeEffects": "Screen Shake Effects",
+  "effective.midnightconfig.wardenScreenShake": "Warden Roars Cause Screen Shake",
+  "effective.midnightconfig.sonicBoomScreenShake": "Warden Sonic Booms Cause Screen Shake",
+  "effective.midnightconfig.ravagerScreenShake": "Ravager Roars Cause Screen Shake",
+  "effective.midnightconfig.dragonScreenShake": "Ender Dragon Roars Cause Screen Shake",
+
+  "effective.midnightconfig.illuminatedEffects": "Illuminated Effects",
+  "effective.midnightconfig.fireflyDensity": "Firefly Spawn Density",
+  "effective.midnightconfig.chorusPetalDensity": "Chorus Petal Spawn Density",
+  "effective.midnightconfig.willOWispDensity": "Will O' Wisp Spawn Density",
+  "effective.midnightconfig.eyesInTheDark": "Enable Eyes in the Dark",
+  "effective.midnightconfig.enum.EyesInTheDarkOptions.HALLOWEEN": "On Halloween",
+  "effective.midnightconfig.enum.EyesInTheDarkOptions.ALWAYS": "Always",
+  "effective.midnightconfig.enum.EyesInTheDarkOptions.DISABLED": "No",
+
+  "effective.midnightconfig.improvedEffects": "Improved Effects",
+  "effective.midnightconfig.improvedFireballs": "Improved Fireballs",
+  "effective.midnightconfig.improvedDragonFireballsAndBreath": "Improved Dragon Fireballs and Breath",
+  "effective.midnightconfig.improvedSpectralArrows": "Improved Spectral Arrows",
+  "effective.midnightconfig.improvedGlowSquidParticles": "Improved Glow Squid Particles",
+
+  "effective.midnightconfig.miscellaneous": "Miscellaneous",
+
+  "effective.midnightconfig.cosmetics": "Enable Cosmetics",
+  "effective.midnightconfig.enum.CosmeticsOptions.ENABLE": "Yes",
+  "effective.midnightconfig.enum.CosmeticsOptions.FIRST_PERSON": "Yes and in First Person)",
+  "effective.midnightconfig.enum.CosmeticsOptions.DISABLE": "No",
   "effective.midnightconfig.feedbacking": "Feedbacking"
 }
