Add two new choices to the Allay trail option to either have trail only, twinkle only, both or none

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -26,6 +26,10 @@
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Visual",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.NEVER": "Never",
   "effective.midnightconfig.allayTrails": "Enable Allay trails",
+  "effective.midnightconfig.enum.AllayTrailOptions.BOTH": "Trail and Twinkle",
+  "effective.midnightconfig.enum.AllayTrailOptions.TRAIL": "Trail only",
+  "effective.midnightconfig.enum.AllayTrailOptions.TWINKLE": "Twinkle only",
+  "effective.midnightconfig.enum.AllayTrailOptions.NONE": "None",
   "effective.midnightconfig.goldenAllays": "Enable Golden Allays",
   "effective.midnightconfig.screenShakeEffects": "Screen Shake Effects",
   "effective.midnightconfig.wardenScreenShake": "Warden Roars Cause Screen Shake",
