--- a/src/main/resources/assets/effective/lang/uk_ua.json
+++ b/src/main/resources/assets/effective/lang/uk_ua.json
@@ -26,6 +26,10 @@
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Візуально",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.NEVER": "Ніколи",
   "effective.midnightconfig.allayTrails": "Увімкнути стежки збириків",
+  "effective.midnightconfig.enum.AllayTrailOptions.BOTH": "Слід та блиск",
+  "effective.midnightconfig.enum.AllayTrailOptions.TRAIL": "Лише слід",
+  "effective.midnightconfig.enum.AllayTrailOptions.TWINKLE": "Лише блиск",
+  "effective.midnightconfig.enum.AllayTrailOptions.NONE": "Нічого",
   "effective.midnightconfig.goldenAllays": "Увімкнути золотих збириків",
   "effective.midnightconfig.screenShakeEffects": "Ефекти тремтіння екрану",
   "effective.midnightconfig.wardenScreenShake": "Рів боронителя спричиняє тремтіння екрану",
@@ -39,7 +43,7 @@
   "effective.midnightconfig.eyesInTheDark": "Увімкнути очі в темряві",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.HALLOWEEN": "У Гелловін",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.ALWAYS": "Завжди",
-  "effective.midnightconfig.enum.EyesInTheDarkOptions.DISABLED": "Ні",
+  "effective.midnightconfig.enum.EyesInTheDarkOptions.NEVER": "Ніколи",
   "effective.midnightconfig.improvedEffects": "Покращені ефекти",
   "effective.midnightconfig.improvedFireballs": "Покращення вогняних куль",
   "effective.midnightconfig.improvedDragonFireballsAndBreath": "Покращення вогняних куль та дихання дракона",
