--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -2,7 +2,7 @@
   "effective.subtitles.ambience.waterfall": "Water falls",
   "effective.subtitles.entity.parry": "I'm not gonna sugarcoat it",
   "effective.midnightconfig.title": "Effective Config",
-  "effective.midnightconfig.waterEffects": "Water Effects",
+  "effective.midnightconfig.category.waterEffects": "Water",
   "effective.midnightconfig.splashes": "Enable Splashes",
   "effective.midnightconfig.splashRimAlpha": "Splash Rim Alpha",
   "effective.midnightconfig.flowingWaterSplashingDensity": "Flowing Water Splashing Density",
@@ -20,7 +20,7 @@
   "effective.midnightconfig.enum.ChestsOpenOptions.ON_SOUL_SAND": "On Soul Sand",
   "effective.midnightconfig.enum.ChestsOpenOptions.RANDOMLY": "Randomly",
   "effective.midnightconfig.enum.ChestsOpenOptions.NEVER": "Never",
-  "effective.midnightconfig.entityEffects": "Entity Effects",
+  "effective.midnightconfig.category.entityEffects": "Entities",
   "effective.midnightconfig.glowSquidHypnotize": "Glow Squid Hypnotizing",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.ATTRACT": "Attract Cursor",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Visual",
@@ -31,12 +31,12 @@
   "effective.midnightconfig.enum.AllayTrailOptions.TWINKLE": "Twinkle only",
   "effective.midnightconfig.enum.AllayTrailOptions.NONE": "None",
   "effective.midnightconfig.goldenAllays": "Enable Golden Allays",
-  "effective.midnightconfig.screenShakeEffects": "Screen Shake Effects",
+  "effective.midnightconfig.category.screenShakeEffects": "Screen Shake",
   "effective.midnightconfig.wardenScreenShake": "Warden Roars Cause Screen Shake",
   "effective.midnightconfig.sonicBoomScreenShake": "Warden Sonic Booms Cause Screen Shake",
   "effective.midnightconfig.ravagerScreenShake": "Ravager Roars Cause Screen Shake",
   "effective.midnightconfig.dragonScreenShake": "Ender Dragon Roars Cause Screen Shake",
-  "effective.midnightconfig.illuminatedEffects": "Illuminated Effects",
+  "effective.midnightconfig.category.illuminatedEffects": "Illumination",
   "effective.midnightconfig.fireflyDensity": "Firefly Spawn Density",
   "effective.midnightconfig.chorusPetalDensity": "Chorus Petal Spawn Density",
   "effective.midnightconfig.willOWispDensity": "Will O' Wisp Spawn Density",
@@ -44,12 +44,12 @@
   "effective.midnightconfig.enum.EyesInTheDarkOptions.HALLOWEEN": "On Halloween",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.ALWAYS": "Always",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.NEVER": "Never",
-  "effective.midnightconfig.improvedEffects": "Improved Effects",
+  "effective.midnightconfig.category.improvedEffects": "Improvements",
   "effective.midnightconfig.improvedFireballs": "Improved Fireballs",
   "effective.midnightconfig.improvedDragonFireballsAndBreath": "Improved Dragon Fireballs and Breath",
   "effective.midnightconfig.improvedSpectralArrows": "Improved Spectral Arrows",
   "effective.midnightconfig.improvedGlowSquidParticles": "Improved Glow Squid Particles",
-  "effective.midnightconfig.miscellaneous": "Miscellaneous",
+  "effective.midnightconfig.category.miscellaneous": "Miscellaneous",
   "effective.midnightconfig.sculkDustDensity": "Sculk Dust Density",
   "effective.midnightconfig.cosmetics": "Enable Cosmetics",
   "effective.midnightconfig.enum.CosmeticsOptions.ENABLE": "Yes",
