Add localization for new config options

--- a/src/main/resources/assets/effective/lang/en_us.json
+++ b/src/main/resources/assets/effective/lang/en_us.json
@@ -4,6 +4,7 @@
   "effective.midnightconfig.title": "Effective Config",
   "effective.midnightconfig.category.waterEffects": "Water",
   "effective.midnightconfig.splashes": "Enable Splashes",
+  "effective.midnightconfig.splashThreshold": "Splash Velocity Threshold",
   "effective.midnightconfig.splashRimAlpha": "Splash Rim Alpha",
   "effective.midnightconfig.flowingWaterSplashingDensity": "Flowing Water Splashing Density",
   "effective.midnightconfig.cascades": "Enable Cascades",
@@ -26,12 +27,13 @@
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Visual",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.NEVER": "Never",
   "effective.midnightconfig.allayTrails": "Enable Allay trails",
-  "effective.midnightconfig.enum.AllayTrailOptions.BOTH": "Trail and Twinkle",
-  "effective.midnightconfig.enum.AllayTrailOptions.TRAIL": "Trail only",
-  "effective.midnightconfig.enum.AllayTrailOptions.TWINKLE": "Twinkle only",
-  "effective.midnightconfig.enum.AllayTrailOptions.NONE": "None",
+  "effective.midnightconfig.enum.TrailOptions.BOTH": "Trail and Twinkle",
+  "effective.midnightconfig.enum.TrailOptions.TRAIL": "Trail only",
+  "effective.midnightconfig.enum.TrailOptions.TWINKLE": "Twinkle only",
+  "effective.midnightconfig.enum.TrailOptions.NONE": "None",
   "effective.midnightconfig.goldenAllays": "Enable Golden Allays",
   "effective.midnightconfig.category.screenShakeEffects": "Screen Shake",
+  "effective.midnightconfig.screenShakeIntensity": "Screen Shake Intensity",
   "effective.midnightconfig.wardenScreenShake": "Warden Roars Cause Screen Shake",
   "effective.midnightconfig.sonicBoomScreenShake": "Warden Sonic Booms Cause Screen Shake",
   "effective.midnightconfig.ravagerScreenShake": "Ravager Roars Cause Screen Shake",
@@ -47,7 +49,7 @@
   "effective.midnightconfig.category.improvedEffects": "Improvements",
   "effective.midnightconfig.improvedFireballs": "Improved Fireballs",
   "effective.midnightconfig.improvedDragonFireballsAndBreath": "Improved Dragon Fireballs and Breath",
-  "effective.midnightconfig.improvedSpectralArrows": "Improved Spectral Arrows",
+  "effective.midnightconfig.spectralArrowTrails": "Spectral Arrow Trails",
   "effective.midnightconfig.improvedGlowSquidParticles": "Improved Glow Squid Particles",
   "effective.midnightconfig.category.miscellaneous": "Miscellaneous",
   "effective.midnightconfig.sculkDustDensity": "Sculk Dust Density",
@@ -56,5 +58,6 @@
   "effective.midnightconfig.enum.CosmeticsOptions.FIRST_PERSON": "Yes and in First Person",
   "effective.midnightconfig.enum.CosmeticsOptions.DISABLE": "No",
   "effective.midnightconfig.ultrakill": "ULTRAKILL",
+  "effective.midnightconfig.freezeFrames": "Ultrakill Freeze Frames",
   "effective:modmenu.dashboard": "Dashboard"
 }
