Rearrange the config into visuals and audio categories

--- a/src/client/resources/assets/effective/lang/en_us.json
+++ b/src/client/resources/assets/effective/lang/en_us.json
@@ -2,7 +2,9 @@
   "effective.subtitles.ambience.waterfall": "Water falls",
   "effective.subtitles.entity.parry": "I'm not gonna sugarcoat it",
   "effective.midnightconfig.title": "Effective Config",
-  "effective.midnightconfig.category.waterEffects": "Water",
+  "effective.midnightconfig.category.visuals": "Visuals",
+  "effective.midnightconfig.category.audio": "Audio",
+  "effective.midnightconfig.waterEffects": "Water",
   "effective.midnightconfig.splashes": "Enable Splashes",
   "effective.midnightconfig.splashThreshold": "Splash Velocity Threshold",
   "effective.midnightconfig.splashRimAlpha": "Splash Rim Alpha",
@@ -21,7 +23,7 @@
   "effective.midnightconfig.enum.ChestsOpenOptions.ON_SOUL_SAND": "On Soul Sand",
   "effective.midnightconfig.enum.ChestsOpenOptions.RANDOMLY": "Randomly",
   "effective.midnightconfig.enum.ChestsOpenOptions.NEVER": "Never",
-  "effective.midnightconfig.category.entityEffects": "Entities",
+  "effective.midnightconfig.entityEffects": "Entities",
   "effective.midnightconfig.glowSquidHypnotize": "Glow Squid Hypnotizing",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.ATTRACT": "Attract Cursor",
   "effective.midnightconfig.enum.GlowSquidHypnoOptions.VISUAL": "Visual",
@@ -32,13 +34,13 @@
   "effective.midnightconfig.enum.TrailOptions.TWINKLE": "Twinkle only",
   "effective.midnightconfig.enum.TrailOptions.NONE": "None",
   "effective.midnightconfig.goldenAllays": "Enable Golden Allays",
-  "effective.midnightconfig.category.screenShakeEffects": "Screen Shake",
+  "effective.midnightconfig.screenShakeEffects": "Screen Shake",
   "effective.midnightconfig.screenShakeIntensity": "Screen Shake Intensity",
   "effective.midnightconfig.wardenScreenShake": "Warden Roars Cause Screen Shake",
   "effective.midnightconfig.sonicBoomScreenShake": "Warden Sonic Booms Cause Screen Shake",
   "effective.midnightconfig.ravagerScreenShake": "Ravager Roars Cause Screen Shake",
   "effective.midnightconfig.dragonScreenShake": "Ender Dragon Roars Cause Screen Shake",
-  "effective.midnightconfig.category.illuminatedEffects": "Illumination",
+  "effective.midnightconfig.illuminatedEffects": "Illumination",
   "effective.midnightconfig.fireflyDensity": "Firefly Spawn Density",
   "effective.midnightconfig.chorusPetalDensity": "Chorus Petal Spawn Density",
   "effective.midnightconfig.willOWispDensity": "Will O' Wisp Spawn Density",
@@ -46,18 +48,18 @@
   "effective.midnightconfig.enum.EyesInTheDarkOptions.HALLOWEEN": "On Halloween",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.ALWAYS": "Always",
   "effective.midnightconfig.enum.EyesInTheDarkOptions.NEVER": "Never",
-  "effective.midnightconfig.category.improvedEffects": "Improvements",
+  "effective.midnightconfig.improvedEffects": "Improvements",
   "effective.midnightconfig.improvedFireballs": "Improved Fireballs",
   "effective.midnightconfig.improvedDragonFireballsAndBreath": "Improved Dragon Fireballs and Breath",
   "effective.midnightconfig.spectralArrowTrails": "Spectral Arrow Trails",
   "effective.midnightconfig.improvedGlowSquidParticles": "Improved Glow Squid Particles",
-  "effective.midnightconfig.category.miscellaneous": "Miscellaneous",
+  "effective.midnightconfig.miscellaneous": "Miscellaneous",
   "effective.midnightconfig.sculkDustDensity": "Sculk Dust Density",
   "effective.midnightconfig.cosmetics": "Enable Cosmetics",
   "effective.midnightconfig.enum.CosmeticsOptions.ENABLE": "Yes",
   "effective.midnightconfig.enum.CosmeticsOptions.FIRST_PERSON": "Yes and in First Person",
   "effective.midnightconfig.enum.CosmeticsOptions.DISABLE": "No",
   "effective.midnightconfig.ultrakill": "ULTRAKILL",
-  "effective.midnightconfig.freezeFrames": "Ultrakill Freeze Frames",
+  "effective.midnightconfig.cascadeAudio": "Cascade Audio",
   "effective:modmenu.dashboard": "Dashboard"
 }
